shim/third-party/rust/vendor/ghost-0.1.6/tests/ui/function-body.rs
use ghost::phantom;

fn main() {
    // Not supported. https://github.com/dtolnay/ghost/issues/1

    #[phantom]
    struct MyPhantom<T: ?Sized>;
}
